# styleai

./: .env.example  .gitignore  README.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  generate_embeddings.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 80f89af44106_initial_schema.py
apps/api/src/: config.py  main.py
apps/api/src/agent/: graph.py  nodes.py  state.py  tools.py
apps/api/src/auth/: deps.py
apps/api/src/db/: engine.py  models.py
apps/api/src/routers/: events.py  health.py  products.py  recommendations.py  users.py  wishlist.py
apps/api/src/schemas/: events.py  products.py  recommendations.py  users.py
apps/api/src/services/: embedding.py  product.py
apps/web/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/src/: proxy.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/app/[locale]/login/: page.tsx
apps/web/src/app/[locale]/products/: page.tsx
apps/web/src/app/[locale]/profile/: page.tsx
apps/web/src/app/[locale]/recommendations/: page.tsx
apps/web/src/components/auth/: auth-provider.tsx
apps/web/src/components/layout/: footer.tsx  header.tsx  locale-switcher.tsx
apps/web/src/components/product/: product-card.tsx  product-filters.tsx  products-grid.tsx
apps/web/src/i18n/: config.ts  navigation.ts  request.ts
apps/web/src/lib/: api.ts
apps/web/src/lib/supabase/: middleware.ts
apps/web/src/messages/: de.json  en.json  es.json  fr.json  it.json
infra/: docker-compose.yml
(+1 files in other folders)
